// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;

exports[`explorer not vlt installed 1`] = `

<div>
  <gui-setup-project>
  </gui-setup-project>
</div>

`;

exports[`render default 1`] = `

<div>
</div>

`;

exports[`render no results if search throws 1`] = `

<div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;
